src/test/ui/const-generics/slice-const-param.min.stderr
error: `&'static str` is forbidden as the type of a const generic parameter
  --> $DIR/slice-const-param.rs:7:40
   |
LL | pub fn function_with_str<const STRING: &'static str>() -> &'static str {
   |                                        ^^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#[feature(const_generics)]`

error: `&'static [u8]` is forbidden as the type of a const generic parameter
  --> $DIR/slice-const-param.rs:12:41
   |
LL | pub fn function_with_bytes<const BYTES: &'static [u8]>() -> &'static [u8] {
   |                                         ^^^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#[feature(const_generics)]`

error: aborting due to 2 previous errors

